# PixieNet

./: .gitignore  LICENSE  README.md  _config.yml  index.html  index.md  params.json
App/: BinaryConvolution.cpp  BinaryConvolution.h  BinaryLayer.h  BinaryMatrix.h  BinaryTensor3D.cpp  BinaryTensor3D.h  CameraExampleAppDelegate.h  CameraExampleAppDelegate.m  CameraExampleViewController.h  CameraExampleViewController.mm  README.md  XnorNetwork.cpp  XnorNetwork.h  main.mm
App/PixieNet.xcodeproj/: project.pbxproj
App/en.lproj/: MainStoryboard_iPhone.storyboard
ArmaPixieNet/ArmaPixieNet/: AppDelegate.h  AppDelegate.m  ArmaConvolution.cpp  ArmaConvolution.h  ViewController.h  ViewController.mm  main.m
ArmaPixieNet/ArmaPixieNet.xcodeproj/: project.pbxproj
ArmaPixieNet/ArmaPixieNetTests/: ArmaPixieNetTests.m
ArmaPixieNet/ArmaPixieNetUITests/: ArmaPixieNetUITests.m
Binary_vs_Arma/Binary_vs_Arma/: GEMM.cpp  (+12 more)
Binary_vs_Arma/Binary_vs_Arma.xcodeproj/: project.pbxproj
Importer/: alexnet.cfg
Prototype/: BinaryConvolution.cpp  BinaryConvolution.h  BinaryLayer.cpp  BinaryLayer.h  BinaryMatrix.cpp  BinaryMatrix.h  BinaryTensor.cpp  BinaryTensor3D.cpp  BinaryTensor3D.h  BitSetConv.cpp  BitSetConv.h  CMakeLists.txt  TestArmadillo.cpp  TestArmadillo.h  TestBinaryConvolution.cpp  TestBinaryConvolution.h  TestBinaryLayer.cpp  TestBinaryLayer.h  TestBinaryMatrix.cpp  TestBinaryMatrix.h  TestBinaryTensor3D.cpp  TestBinaryTensor3D.h  TestXnorNetwork.cpp  TestXnorNetwork.h  Timer.h  XnorNet.cpp  XnorNet.h  XnorNetUtils.cpp  XnorNetUtils.h  XnorNetwork.cpp  XnorNetwork.h  main.cpp
(+19 files in other folders)
